--- a/AMLD/AMLD_Workshop/2.ChatFlow/ChatFlow.ipynb
+++ b/AMLD/AMLD_Workshop/2.ChatFlow/ChatFlow.ipynb
@@ -14,18 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/nicolasbaldwin/opt/miniconda3/envs/mockenv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -49,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,18 +50,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[\u001b[36m2024-03-22 19:03:43,139\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:235\u001b[0m][\u001b[32mINFO\u001b[0m] - Dispatch worker started in attached thread.\u001b[0m\n",
-      "[\u001b[36m2024-03-22 19:03:43,146\u001b[0m][\u001b[34maiflows.workers.dispatch_worker:236\u001b[0m][\u001b[32mINFO\u001b[0m] - dispatch_point: coflows_dispatch\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Start Worker thread\n",
     "run_dispatch_worker_thread(cl)"
@@ -97,31 +79,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[\u001b[36m2024-03-22 19:03:45,482\u001b[0m][\u001b[34maiflows.flow_verse.loading:775\u001b[0m][\u001b[32mINFO\u001b[0m] - \u001b[32m[<interactive>]\u001b[0m started to sync flow module dependencies to /Users/nicolasbaldwin/Documents/OneDrive/EPFL/DLAB/aiflow-colink/aiflows/AMLD/2.ChatFlow/flow_modules...\u001b[0m\n",
-      "[\u001b[36m2024-03-22 19:03:45,876\u001b[0m][\u001b[34maiflows.flow_verse.loading:608\u001b[0m][\u001b[32mINFO\u001b[0m] - aiflows/ChatFlowModule:main already synced, skip\u001b[0m\n",
-      "[\u001b[36m2024-03-22 19:03:45,878\u001b[0m][\u001b[34maiflows.flow_verse.loading:825\u001b[0m][\u001b[32mINFO\u001b[0m] - \u001b[32m[<interactive>]\u001b[0m finished syncing\n",
-      "\n",
-      "\u001b[0m\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['/Users/nicolasbaldwin/Documents/OneDrive/EPFL/DLAB/aiflow-colink/aiflows/AMLD/2.ChatFlow/flow_modules/aiflows/ChatFlowModule']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "from aiflows import flow_verse\n",
@@ -167,65 +127,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "    \"_target_\": \"flow_modules.aiflows.ChatFlowModule.ChatAtomicFlow.instantiate_from_default_config\",\n",
-      "    \"name\": \"ChatAtomicFlow\",\n",
-      "    \"description\": \"Flow which uses as tool an LLM though an API\",\n",
-      "    \"enable_cache\": true,\n",
-      "    \"n_api_retries\": 6,\n",
-      "    \"wait_time_between_retries\": 20,\n",
-      "    \"system_name\": \"system\",\n",
-      "    \"user_name\": \"user\",\n",
-      "    \"assistant_name\": \"assistant\",\n",
-      "    \"backend\": {\n",
-      "        \"_target_\": \"aiflows.backends.llm_lite.LiteLLMBackend\",\n",
-      "        \"api_infos\": \"???\",\n",
-      "        \"model_name\": \"gpt-3.5-turbo\",\n",
-      "        \"n\": 1,\n",
-      "        \"max_tokens\": 2000,\n",
-      "        \"temperature\": 0.3,\n",
-      "        \"top_p\": 0.2,\n",
-      "        \"frequency_penalty\": 0,\n",
-      "        \"presence_penalty\": 0,\n",
-      "        \"stream\": true\n",
-      "    },\n",
-      "    \"system_message_prompt_template\": {\n",
-      "        \"_target_\": \"aiflows.prompt_template.JinjaPrompt\"\n",
-      "    },\n",
-      "    \"init_human_message_prompt_template\": {\n",
-      "        \"_target_\": \"aiflows.prompt_template.JinjaPrompt\"\n",
-      "    },\n",
-      "    \"human_message_prompt_template\": {\n",
-      "        \"_target_\": \"aiflows.prompt_template.JinjaPrompt\",\n",
-      "        \"template\": \"{{query}}\",\n",
-      "        \"input_variables\": [\n",
-      "            \"query\"\n",
-      "        ]\n",
-      "    },\n",
-      "    \"input_interface_initialized\": [\n",
-      "        \"query\"\n",
-      "    ],\n",
-      "    \"query_message_prompt_template\": {\n",
-      "        \"_target_\": \"aiflows.prompt_template.JinjaPrompt\"\n",
-      "    },\n",
-      "    \"previous_messages\": {\n",
-      "        \"first_k\": null,\n",
-      "        \"last_k\": null\n",
-      "    },\n",
-      "    \"output_interface\": [\n",
-      "        \"api_output\"\n",
-      "    ]\n",
-      "}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Print the default configuration\n",
     "default_cfg = read_yaml_file(\"flow_modules/aiflows/ChatFlowModule/ChatAtomicFlow.yaml\")\n",
@@ -279,31 +183,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[\u001b[36m2024-03-22 19:03:49,905\u001b[0m][\u001b[34maiflows.utils.serve_utils:116\u001b[0m][\u001b[32mINFO\u001b[0m] - Started serving flow_modules.aiflows.ChatFlowModule.ChatAtomicFlow at flows:ChatAtomicFlow.\u001b[0m\n",
-      "[\u001b[36m2024-03-22 19:03:49,906\u001b[0m][\u001b[34maiflows.utils.serve_utils:117\u001b[0m][\u001b[32mINFO\u001b[0m] - dispatch_point: coflows_dispatch\u001b[0m\n",
-      "[\u001b[36m2024-03-22 19:03:49,907\u001b[0m][\u001b[34maiflows.utils.serve_utils:118\u001b[0m][\u001b[32mINFO\u001b[0m] - parallel_dispatch: False\u001b[0m\n",
-      "[\u001b[36m2024-03-22 19:03:49,908\u001b[0m][\u001b[34maiflows.utils.serve_utils:119\u001b[0m][\u001b[32mINFO\u001b[0m] - singleton: False\n",
-      "\u001b[0m\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "serve_utils.serve_flow(\n",
     "    cl=cl,\n",
@@ -330,17 +212,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[\u001b[36m2024-03-22 19:03:52,466\u001b[0m][\u001b[34maiflows.utils.serve_utils:336\u001b[0m][\u001b[32mINFO\u001b[0m] - Mounted 3a1e61e0-5ace-4f8a-9eef-2c691ce822aa at flows:ChatAtomicFlow:mounts:local:3a1e61e0-5ace-4f8a-9eef-2c691ce822aa\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# STEP 1: Copy the default configuration of the `ChatAtomicFlow`\n",
     "\n",
@@ -348,13 +222,14 @@
     "\n",
     "# STEP 2: Override the system_message_prompt_template to prompt the user to speak in French\n",
     "language = \"French\"\n",
-    "chatbot_overrides[\"system_message_prompt_template\"][\"template\"] = \\\n",
-    "f'You are a helpful chatbot that truthfully answers questions. Answer in the following language: {language}.'\n",
+    "###### TODO: Write a system prompt Which constrains the model to reply in french (no need to for it be long)\n",
+    "chatbot_overrides[\"system_message_prompt_template\"][\"template\"] = ??? \n",
     "\n",
     "# STEP 3: Load the API keys\n",
     "from aiflows.backends.api_info import ApiInfo\n",
     "\n",
     "api_info = [ApiInfo(backend_used=\"openai\", api_key=os.getenv(\"OPENAI_API_KEY\"))]\n",
+    "#load api keys to goncig\n",
     "quick_load_api_keys(chatbot_overrides, api_info)\n",
     "\n",
     "#STEP 4: Get an instance of the `ChatAtomicFlow` with the overrides\n",
@@ -367,30 +242,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "~~~~Sent message~~~~\n",
-      " {'id': 0, 'query': 'What is the capital of Switzerland?'}\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "~~~~Reply~~~~ \n",
-      " {'api_output': 'La capitale de la Suisse est Berne.'}\n",
-      "~~~~Sent message~~~~\n",
-      " {'id': 0, 'query': 'Where is it located?'}\n",
-      "~~~~Reply~~~~ \n",
-      " {'api_output': 'Berne est située en Suisse, au centre du pays.'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# STEP 5: Send messages to the chatbot\n",
     "input_message1 = FlowMessage(\n",
@@ -421,23 +275,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[\u001b[36m2024-03-22 19:04:48,317\u001b[0m][\u001b[34maiflows.utils.serve_utils:336\u001b[0m][\u001b[32mINFO\u001b[0m] - Mounted fe362b2e-3f51-43f5-9334-b29d3dbcea09 at flows:ChatAtomicFlow:mounts:local:fe362b2e-3f51-43f5-9334-b29d3dbcea09\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# STEP 1: Copy the default configuration of the `ChatAtomicFlow`\n",
     "english_chatbot_gpt4_overrides = copy.deepcopy(default_cfg)\n",
     "\n",
-    "# STEP 2: Override the model_name to use GPT-4\n",
-    "english_chatbot_gpt4_overrides[\"backend\"][\"model_name\"] = {\"openai\": \"gpt-4\"}\n",
+    "# STEP 2: ##### TODO: Override the model_name to use GPT-4 ######\n",
+    "???\n",
     "\n",
     "# STEP 3: Load the API keys\n",
     "api_info = [ApiInfo(backend_used=\"openai\", api_key=os.getenv(\"OPENAI_API_KEY\"))]\n",
@@ -447,7 +293,7 @@
     "english_chatbot_gpt4 = serve_utils.get_flow_instance(\n",
     "    cl=cl,\n",
     "    flow_endpoint=\"ChatAtomicFlow\",\n",
-    "    config_overrides=english_chatbot_gpt4_overrides,\n",
+    "    ??? ### TODO: override the default configuration of ChatAtomicFlow with your own\n",
     ")\n",
     "\n",
     "\n"
@@ -455,30 +301,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "~~~~Sent message~~~~\n",
-      " {'id': 0, 'query': 'What is the capital of Switzerland?'}\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "~~~~Reply~~~~ \n",
-      " {'api_output': 'Hello! How can I assist you today?'}\n",
-      "~~~~Sent message~~~~\n",
-      " {'id': 0, 'query': 'Where is it located?'}\n",
-      "~~~~Reply~~~~ \n",
-      " {'api_output': \"I'm sorry, but I need more information to answer your question. Could you please specify what location you're asking about?\"}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# STEP 5: Send messages to the chatbot\n",
     "\n",
@@ -510,73 +335,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[\u001b[36m2024-03-22 19:05:12,833\u001b[0m][\u001b[34maiflows.utils.serve_utils:336\u001b[0m][\u001b[32mINFO\u001b[0m] - Mounted 6c013253-e784-41fc-9cd0-1e324caafd5e at flows:ChatAtomicFlow:mounts:local:6c013253-e784-41fc-9cd0-1e324caafd5e\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Deepcopy of demo config\n",
     "overrides_config = copy.deepcopy(default_cfg)\n",
     "\n",
     "#TODO: Mount a Chatflow who generates text with a `temperature = 1` and a `system_message_prompt_template` that is personalized\n",
-    "overrides_config[\"backend\"][\"temperature\"] = 1.0\n",
-    "overrides_config[\"system_message_prompt_template\"][\"template\"] = \\\n",
-    "    \"You are a helpful chatbot that fills out a given prompt in areas surrounded by brackets '[[]]'. Within the brackets are instructions you should follow.\"\n",
-    "\n",
+    "???\n",
     "\n",
     "#loading api key to config\n",
-    "api_info = [ApiInfo(backend_used=\"openai\", api_key=os.getenv(\"OPENAI_API_KEY\"))]\n",
-    "quick_load_api_keys(overrides_config, api_info)\n",
+    "???\n",
     "\n",
     "\n",
     "#TO DO get a flow instance\n",
-    "personalized_chatbot = serve_utils.get_flow_instance(\n",
-    "    cl=cl,\n",
-    "    flow_endpoint=\"ChatAtomicFlow\",\n",
-    "    config_overrides=overrides_config,\n",
-    ")"
+    "personalized_chatbot = ???"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "~~~~Sent message~~~~\n",
-      " {'id': 0, 'query': 'The capital of Switzerland is [[insert capital]].'}\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "~~~~Reply~~~~ \n",
-      " How can I assist you today?\n",
-      "~~~~Sent message~~~~\n",
-      " {'id': 0, 'query': \"\\nDear Margaret,\\n[[Ask about her day and talk about the sunny weather]]\\n\\n[[Ask if she has finished her part of the report]]. I've finished my part and I'm looking forward to the weekend!\\n\\n[[Sign of with my name: Nicolas Baldwin]].\\n\"}\n",
-      "~~~~Reply~~~~ \n",
-      " Dear Margaret,\n",
-      "\n",
-      "I hope you're having a wonderful day! Isn't the sunny weather just lovely?\n",
-      "\n",
-      "Have you had a chance to finish your part of the report? I've completed mine and I'm excited for the weekend!\n",
-      "\n",
-      "Warm regards,\n",
-      "Nicolas Baldwin\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "input_message1 = FlowMessage(\n",
     "    data={\"id\": 0, \"query\": \"The capital of Switzerland is [[insert capital]].\"},\n",
