--- a/AMLD/AMLD_Solutions/1.ReverseNumber/ReverseNumber.ipynb
+++ b/AMLD/AMLD_Solutions/1.ReverseNumber/ReverseNumber.ipynb
@@ -236,7 +236,7 @@
    "source": [
     "### 2.2 Serving A Flow\n",
     "\n",
-    "To serve a Flow, you need to define its class and `run` method, along with its default configuration file (as we've done in the previous section for the `ReverseNumberAtomicFlow`). Once the Flow is defined, you can serve it using the `serve_flow` function. Essentially, this function saves the Flow's default configuration in the CoLink server's storage to be able to instantiate instances of it when requested.\n",
+    "To serve a Flow, you need to define its class and `run` method, along with its default configuration file (as we've done in the previous section for the `ReverseNumberAtomicFlow`). Once the Flow is defined, you can serve it using the `serve_flow` function. Essentially, this function saves the path to the Flow's class to the CoLink server's storage to be able to instantiate instances of it when requested.\n",
     "\n",
     "The key parameters of the `serve_flow` function are as follows:\n",
     "- `cl`: The CoLink object containing user and server information (this object is created when you connect to a server).\n",
@@ -570,14 +570,12 @@
     "    \n",
     "    \"subflows_config\": {\n",
     "        \"first_reverse_flow\": {\n",
-    "            \"_target_\": \"aiflows.base_flows.AtomicFlow.instantiate_from_default_config\",\n",
     "            \"user_id\": \"local\",\n",
     "            \"flow_endpoint\": \"reverse_number\",\n",
     "            \"name\": \"A proxy Flow that calls reverse number to reverse number AGAIN.\",\n",
     "            \"description\": \"A proxy Flow that calls reverse number to reverse number.\",\n",
     "        },\n",
     "        \"second_reverse_flow\": {\n",
-    "            \"_target_\": \"aiflows.base_flows.AtomicFlow.instantiate_from_default_config\",\n",
     "            \"user_id\": \"local\",\n",
     "            \"flow_endpoint\": \"reverse_number\",\n",
     "            \"name\": \"Proxy Second Reverse\",\n",
@@ -904,14 +902,12 @@
     "    \n",
     "    \"subflows_config\": {\n",
     "        \"first_reverse_flow\": {\n",
-    "            \"_target_\": \"aiflows.base_flows.AtomicFlow.instantiate_from_default_config\",\n",
     "            \"user_id\": \"local\",\n",
     "            \"flow_endpoint\": \"reverse_number\",\n",
     "            \"name\": \"A proxy Flow that calls reverse number to reverse number AGAIN.\",\n",
     "            \"description\": \"A proxy Flow that calls reverse number to reverse number.\",\n",
     "        },\n",
     "        \"second_reverse_flow\": {\n",
-    "            \"_target_\": \"aiflows.base_flows.AtomicFlow.instantiate_from_default_config\",\n",
     "            \"user_id\": \"local\",\n",
     "            \"flow_endpoint\": \"reverse_number\",\n",
     "            \"name\": \"Proxy Second Reverse\",\n",
