remove unecessary comments

--- a/AMLD/AMLD_Solutions/1.ReverseNumber/ReverseNumber.ipynb
+++ b/AMLD/AMLD_Solutions/1.ReverseNumber/ReverseNumber.ipynb
@@ -595,8 +595,7 @@
     "- **`name` and `description`, `_target` , `input_interface`, `ouput_interface`**: These parameters are described in the previous section.\n",
     "\n",
     "- **`subflows_config`**:  Each subflow is articulated as a key-item pair within a dictionary. The key denotes the name assigned to the subflow, while the corresponding item is a dictionary encapsulating the configuration of the subflow. In this instance, subflows are outlined with their default configuration, incorporating overrides for the name and description of each Flow. Noteworthy keys:\n",
-    "  - `flow_endpoint` and `user_id` match the `reverse_number` endpoint and `local` user ID, respectively, which were used to serve the `ReverseNumberAtomicFlow`. This allows us to get an instance of the Flow we served earlier when calling `get_flow_instance` (we don't have to serve `ReverseNumberAtomicFlow` again).\n",
-    "  - `_target_`: The target here is `aiflows.base_flows.AtomicFlow.instantiate_from_default_config`, which is an atomic Flow. Remember that proxy Fows are atomic Flows, so we can use the same target for all of them. Note that you can also use the target of the Flow you are calling, but this is not necessary (also, when you are calling a Flow served by some other user you might not have access to the target of the Flow, so you can use the target of the atomic Flow)."
+    "  - `flow_endpoint` and `user_id` match the `reverse_number` endpoint and `local` user ID, respectively, which were used to serve the `ReverseNumberAtomicFlow`. This allows us to get an instance of the Flow we served earlier when calling `get_flow_instance` (we don't have to serve `ReverseNumberAtomicFlow` again).\n"
    ]
   },
   {
