Update notebook with full output

--- a/AMLD/AMLD_Workshop/5.Human/Human.ipynb
+++ b/AMLD/AMLD_Workshop/5.Human/Human.ipynb
@@ -27,16 +27,7 @@
    "execution_count": 1,
    "id": "3290339a-e045-465a-a503-03dece48822a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/nicolasbaldwin/opt/miniconda3/envs/mockenv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -115,13 +106,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "025e1f6940ed7c170a6b1f9a9f5f8cfbfa778a3d13e88a484c719968312520c1bb\n"
+      "03a939f180f53ab0df52091a4654288c09a95afa46e30b80ba209d0e7fddaa5231\n"
      ]
     }
    ],
    "source": [
     "addr = \"https://amld.colink-server.colearn.cloud\"\n",
-    "jwt = \"eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJwcml2aWxlZ2UiOiJ1c2VyIiwidXNlcl9pZCI6IjAyNWUxZjY5NDBlZDdjMTcwYTZiMWY5YTlmNWY4Y2ZiZmE3NzhhM2QxM2U4OGE0ODRjNzE5OTY4MzEyNTIwYzFiYiIsImV4cCI6MTcxMzg2NDg0OX0.2zy5SuJlr5Go4dHmuCcOL9n0uJ4OVOf0pfUlIakjHY4\" # YOUR JWT\n",
+    "jwt = ... # YOUR JWT\n",
     "\n",
     "cl = CoLink(addr, jwt)\n",
     "print(cl.get_user_id())"
@@ -242,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "be9b9f3b-55a3-4a30-80eb-d8b5458de1ec",
    "metadata": {
     "scrolled": true
@@ -252,22 +243,92 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\u001b[36m2024-03-23 12:11:13,818\u001b[0m][\u001b[34maiflows.flow_verse.loading:775\u001b[0m][\u001b[32mINFO\u001b[0m] - \u001b[32m[<interactive>]\u001b[0m started to sync flow module dependencies to /Users/nicolasbaldwin/Documents/OneDrive/EPFL/DLAB/aiflow-colink/aiflows/AMLD/AMLD_Workshop/5.Human/flow_modules...\u001b[0m\n"
+      "[\u001b[36m2024-03-23 03:03:09,738\u001b[0m][\u001b[34maiflows.flow_verse.loading:775\u001b[0m][\u001b[32mINFO\u001b[0m] - \u001b[32m[<interactive>]\u001b[0m started to sync flow module dependencies to /home/staverm/workspace/coflows-dev/aiflows/AMLD/AMLD_Workshop/5.Human/flow_modules...\u001b[0m\n",
+      "[\u001b[36m2024-03-23 03:03:09,741\u001b[0m][\u001b[34maiflows.flow_verse.loading:563\u001b[0m][\u001b[32mINFO\u001b[0m] - aiflows/ChatFlowModule:main will be fetched from remote\u001b[0m\n"
      ]
     },
     {
-     "ename": "AssertionError",
-     "evalue": "('/Users/nicolasbaldwin/Documents/OneDrive/EPFL/DLAB/aiflow-colink/aiflows/AMLD/AMLD_Workshop/5.Human/flow_modules/aiflows/ChatFlowModule', '/Users/nicolasbaldwin/Documents/OneDrive/EPFL/DLAB/aiflow-colink/aiflows/AMLD/Human/flow_modules/aiflows/ChatFlowModule')",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m dependencies \u001b[38;5;241m=\u001b[39m [\n\u001b[1;32m      2\u001b[0m     {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124murl\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maiflows/ChatFlowModule\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrevision\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmain\u001b[39m\u001b[38;5;124m\"\u001b[39m},\n\u001b[1;32m      3\u001b[0m     {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124murl\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maiflows/ChatInteractiveFlowModule\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrevision\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmain\u001b[39m\u001b[38;5;124m\"\u001b[39m}\n\u001b[1;32m      4\u001b[0m ]\n\u001b[0;32m----> 5\u001b[0m \u001b[43mflow_verse\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msync_dependencies\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdependencies\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/opt/miniconda3/envs/mockenv/lib/python3.11/site-packages/aiflows/flow_verse/loading.py:846\u001b[0m, in \u001b[0;36msync_dependencies\u001b[0;34m(dependencies, all_overwrite)\u001b[0m\n\u001b[1;32m    843\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    844\u001b[0m     caller_module_name \u001b[38;5;241m=\u001b[39m caller_module\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m\n\u001b[0;32m--> 846\u001b[0m flow_mod_summary \u001b[38;5;241m=\u001b[39m \u001b[43m_sync_dependencies\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    847\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdependencies\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mall_overwrite\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcurdir\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mDEFAULT_CACHE_PATH\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcaller_module_name\u001b[49m\n\u001b[1;32m    848\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    850\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m [mod\u001b[38;5;241m.\u001b[39msync_dir \u001b[38;5;28;01mfor\u001b[39;00m mod \u001b[38;5;129;01min\u001b[39;00m flow_mod_summary\u001b[38;5;241m.\u001b[39mget_mods()]\n",
-      "File \u001b[0;32m~/opt/miniconda3/envs/mockenv/lib/python3.11/site-packages/aiflows/flow_verse/loading.py:808\u001b[0m, in \u001b[0;36m_sync_dependencies\u001b[0;34m(dependencies, all_overwrite, flow_modules_base_dir, cache_root, caller_module_name)\u001b[0m\n\u001b[1;32m    797\u001b[0m     synced_flow_mod_spec \u001b[38;5;241m=\u001b[39m sync_local_dep(\n\u001b[1;32m    798\u001b[0m         previous_synced_flow_mod_spec,\n\u001b[1;32m    799\u001b[0m         url,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    804\u001b[0m         all_overwrite \u001b[38;5;129;01mor\u001b[39;00m dep_overwrite,\n\u001b[1;32m    805\u001b[0m     )\n\u001b[1;32m    806\u001b[0m     \u001b[38;5;66;03m# logger.debug(f\"add local dep {synced_flow_mod_spec} to flow_mod_summary\")\u001b[39;00m\n\u001b[1;32m    807\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 808\u001b[0m     synced_flow_mod_spec \u001b[38;5;241m=\u001b[39m \u001b[43msync_remote_dep\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    809\u001b[0m \u001b[43m        \u001b[49m\u001b[43mprevious_synced_flow_mod_spec\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    810\u001b[0m \u001b[43m        \u001b[49m\u001b[43murl\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    811\u001b[0m \u001b[43m        \u001b[49m\u001b[43mmod_name\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    812\u001b[0m \u001b[43m        \u001b[49m\u001b[43mrevision\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    813\u001b[0m \u001b[43m        \u001b[49m\u001b[43mcaller_module_name\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    814\u001b[0m \u001b[43m        \u001b[49m\u001b[43msync_root\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    815\u001b[0m \u001b[43m        \u001b[49m\u001b[43mcache_root\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    816\u001b[0m \u001b[43m        \u001b[49m\u001b[43mall_overwrite\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01mor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mdep_overwrite\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    817\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    818\u001b[0m     \u001b[38;5;66;03m# logger.debug(f\"add remote dep {synced_flow_mod_spec} to flow_mod_summary\")\u001b[39;00m\n\u001b[1;32m    819\u001b[0m flow_mod_summary\u001b[38;5;241m.\u001b[39madd_mod(synced_flow_mod_spec)\n",
-      "File \u001b[0;32m~/opt/miniconda3/envs/mockenv/lib/python3.11/site-packages/aiflows/flow_verse/loading.py:568\u001b[0m, in \u001b[0;36msync_remote_dep\u001b[0;34m(previous_synced_flow_mod_spec, repo_id, mod_name, revision, caller_module_name, sync_root, cache_root, overwrite)\u001b[0m\n\u001b[1;32m    565\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m synced_flow_mod_spec\n\u001b[1;32m    567\u001b[0m \u001b[38;5;66;03m### we have a previously synced flow mod spec which has same **repo_id**\u001b[39;00m\n\u001b[0;32m--> 568\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m sync_dir \u001b[38;5;241m==\u001b[39m previous_synced_flow_mod_spec\u001b[38;5;241m.\u001b[39msync_dir, (sync_dir, previous_synced_flow_mod_spec\u001b[38;5;241m.\u001b[39msync_dir)\n\u001b[1;32m    570\u001b[0m \u001b[38;5;66;03m# update if (revision, commit_hash) changed\u001b[39;00m\n\u001b[1;32m    571\u001b[0m remote_revision_commit_hash_changed \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: ('/Users/nicolasbaldwin/Documents/OneDrive/EPFL/DLAB/aiflow-colink/aiflows/AMLD/AMLD_Workshop/5.Human/flow_modules/aiflows/ChatFlowModule', '/Users/nicolasbaldwin/Documents/OneDrive/EPFL/DLAB/aiflow-colink/aiflows/AMLD/Human/flow_modules/aiflows/ChatFlowModule')"
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "33865cfbf655416c9151f182b812e0bf",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Fetching 9 files:   0%|          | 0/9 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "84d2fd0f0a14400ea32d2dfa1be02239",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Fetching 9 files:   0%|          | 0/9 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\u001b[36m2024-03-23 03:03:10,036\u001b[0m][\u001b[34maiflows.flow_verse.loading:563\u001b[0m][\u001b[32mINFO\u001b[0m] - aiflows/ChatInteractiveFlowModule:main will be fetched from remote\u001b[0m\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1bd1624515064819851d87a6bf4e2bb7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Fetching 9 files:   0%|          | 0/9 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a58d51159195481f9880188d21061574",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Fetching 9 files:   0%|          | 0/9 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\u001b[36m2024-03-23 03:03:10,360\u001b[0m][\u001b[34maiflows.flow_verse.loading:825\u001b[0m][\u001b[32mINFO\u001b[0m] - \u001b[32m[<interactive>]\u001b[0m finished syncing\n",
+      "\n",
+      "\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['/home/staverm/workspace/coflows-dev/aiflows/AMLD/AMLD_Workshop/5.Human/flow_modules/aiflows/ChatFlowModule',\n",
+       " '/home/staverm/workspace/coflows-dev/aiflows/AMLD/AMLD_Workshop/5.Human/flow_modules/aiflows/ChatInteractiveFlowModule']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -758,7 +819,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
