--- a/Tutorials/Tutorials_DIY/3.ChatWithGuards/ChatWithGuards.ipynb
+++ b/Tutorials/Tutorials_DIY/3.ChatWithGuards/ChatWithGuards.ipynb
@@ -9,7 +9,7 @@
     "**In this tutorial you will:**\n",
     "- Expand your knowledge of CompositeFlows and how to use them for more complex tasks [Section 1](#1-chatbot-with-a-prompt-injection-detector) and [Section 2]\n",
     "- Have implemeted a chatbot with a prompt injection detector [Section 1](#1-chatbot-with-a-prompt-injection-detector)\n",
-    "- Have implemented a chatbot attached to a DB and with a prompt injection detector and a sentiment analysis model [Section 2](#2-enhancing-a-chatbot-with-personalized-databases)\n"
+    "- Have implemented a chatbot attached to a DB and with a prompt injection detector [Section 2](#2-enhancing-a-chatbot-with-personalized-databases)\n"
    ]
   },
   {
